# steam-desktop-guard

./: README.md  build.ps1  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddSecretModal.tsx  AuthCode.tsx  DeleteConfirmationModal.tsx  Layout.tsx
src/hooks/: useAuthCode.ts
src/pages/: Home.tsx  Settings.tsx
src/utils/: steam.ts
